# Static-Visualization-Project

./: README.md  df_exploration.ipynb  index.html  pyproject.toml
data/: COFI_Database_Version_October_2023.csv  COFI_Database_Version_October_2023.xlsx  china_solar_exports_countries_df.csv  mart_solar_exports_full_release_monthly.csv  pv_manufacture_share_2023.xlsx
milestones/: static-draft.md  static-proposal.md
scratch/: df_exploration.ipynb  index.html
src/: final_nb_graphs.ipynb  index2.html
src/article-images/: scatter_invest_regions.html
static-viz/: index.html
