[project]
name = "static-visualization-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "polars>=1.34.0",
    "vega-datasets>=0.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
