[project]
name = "static-visualization-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "altair-saver>=0.5.0",
    "fastexcel>=0.16.0",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=22.0.0",
    "selenium>=4.37.0",
    "vega-datasets>=0.9.0",
    "vl-convert-python>=1.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
